[gd_scene load_steps=8 format=2]

[ext_resource path="res://00_Font_ROTARY/Inconstant-Base100.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Scenes/MinigameCountdown.gd" type="Script" id=2]
[ext_resource path="res://SOund/bleep.mp3" type="AudioStream" id=3]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0, 0, 0, 1 )

[sub_resource type="DynamicFont" id=3]
size = 34
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 200
extra_spacing_bottom = -32
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=4]
size = 102
extra_spacing_bottom = -32
font_data = ExtResource( 1 )

[node name="MinigameCountdown" type="PanelContainer"]
self_modulate = Color( 1, 1, 1, 0.784314 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -381.0
margin_top = -246.0
margin_right = 381.0
margin_bottom = 264.0
custom_styles/panel = SubResource( 1 )
script = ExtResource( 2 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
visible = false
margin_right = 762.0
margin_bottom = 510.0
alignment = 1

[node name="RoundLabel" type="Label" parent="VBoxContainer"]
margin_top = 145.0
margin_right = 762.0
margin_bottom = 182.0
custom_fonts/font = SubResource( 3 )
text = "Round 1"
align = 1
valign = 1

[node name="CounterLabel" type="Label" parent="VBoxContainer"]
margin_top = 186.0
margin_right = 762.0
margin_bottom = 364.0
custom_fonts/font = SubResource( 2 )
text = "3"
align = 1
valign = 1
uppercase = true

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )

[node name="YeahLabel" type="Label" parent="."]
margin_top = 217.0
margin_right = 762.0
margin_bottom = 293.0
custom_fonts/font = SubResource( 4 )
text = "YEAH :)"
align = 1
valign = 1

[node name="YeahTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="CountdownTimer" type="Timer" parent="."]

[connection signal="timeout" from="CountdownTimer" to="." method="_on_Timer_timeout"]
